// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/TextInput defaultTextInput 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 ezPMxm"
  data-testid={null}
>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="TextInput__Group-shde0o-0 gRGOZf"
      placeholder="E.g. John Smith"
      type="text"
    >
      <label
        className="TextInput__Label-shde0o-4 gJzsZZ"
        htmlFor="textInput1"
      >
        Full name
      </label>
      <input
        className="TextInput__Input-shde0o-2 gUCiTr"
        id="textInput1"
        label="Full name"
        placeholder="E.g. John Smith"
        type="text"
      />
    </div>
  </div>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="TextInput__Group-shde0o-0 gRGOZf"
      placeholder="E.g. John Smith"
      type="text"
    >
      <label
        className="TextInput__Label-shde0o-4 ftnqwa"
        htmlFor="textInput2"
      >
        Full name
      </label>
      <input
        className="TextInput__Input-shde0o-2 jsIVpY"
        id="textInput2"
        label="Full name"
        placeholder="E.g. John Smith"
        type="text"
      />
    </div>
  </div>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="TextInput__Group-shde0o-0 gRGOZf"
      placeholder="E.g. John Smith"
      type="text"
    >
      <label
        className="TextInput__Label-shde0o-4 dgeIiB"
        htmlFor="textInput3"
      >
        Full name
      </label>
      <input
        className="TextInput__Input-shde0o-2 koskDo"
        id="textInput3"
        label="Full name"
        placeholder="E.g. John Smith"
        type="text"
      />
    </div>
  </div>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="TextInput__Group-shde0o-0 gRGOZf"
      placeholder="E.g. John Smith"
      type="text"
    >
      <label
        className="TextInput__Label-shde0o-4 khxHLp"
        htmlFor="textInput4"
      >
        Full name
      </label>
      <input
        className="TextInput__Input-shde0o-2 gUCiTr"
        id="textInput4"
        label="Full name"
        placeholder="E.g. John Smith"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/TextInput floatingLabelTextInput 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 ezPMxm"
  data-testid={null}
>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="TextInput__Group-shde0o-0 gRGOZf"
      placeholder="E.g. John Smith"
      type="text"
    >
      <input
        className="TextInput__Input-shde0o-2 hOhAbG"
        id="textInput5"
        label="Full name"
        placeholder="E.g. John Smith"
        type="text"
      />
      <label
        className="TextInput__Label-shde0o-4 ZQbaL"
        htmlFor="textInput5"
      >
        Full name
      </label>
    </div>
  </div>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="TextInput__Group-shde0o-0 gRGOZf"
      placeholder="E.g. John Smith"
      type="text"
    >
      <input
        className="TextInput__Input-shde0o-2 hUAA-Dg"
        id="textInput6"
        label="Full name"
        placeholder="E.g. John Smith"
        type="text"
      />
      <label
        className="TextInput__Label-shde0o-4 cohUvM"
        htmlFor="textInput6"
      >
        Full name
      </label>
    </div>
  </div>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="TextInput__Group-shde0o-0 gRGOZf"
      placeholder="E.g. John Smith"
      type="text"
    >
      <input
        className="TextInput__Input-shde0o-2 hatoxP"
        id="textInput7"
        label="Full name"
        placeholder="E.g. John Smith"
        type="text"
      />
      <label
        className="TextInput__Label-shde0o-4 kYKNXg"
        htmlFor="textInput7"
      >
        Full name
      </label>
    </div>
  </div>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="TextInput__Group-shde0o-0 gRGOZf"
      placeholder="E.g. John Smith"
      type="text"
    >
      <input
        className="TextInput__Input-shde0o-2 hOhAbG"
        id="textInput8"
        label="Full name"
        placeholder="E.g. John Smith"
        type="text"
      />
      <label
        className="TextInput__Label-shde0o-4 kYMwjf"
        htmlFor="textInput8"
      >
        Full name
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/TextInput numberTextInput 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 ezPMxm"
  data-testid={null}
>
  <div
    className="TextInput__Group-shde0o-0 gRGOZf"
    value="345345.55"
  >
    <label
      className="TextInput__Label-shde0o-4 gJzsZZ"
      htmlFor="numInput1"
    >
      Currency
    </label>
    <input
      className="TextInput__NumberInput-shde0o-3 bzFUJB"
      id="numInput1"
      inputMode="numeric"
      label="Currency"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseUp={[Function]}
      type="text"
      value="$345345.55"
    />
  </div>
</div>
`;

exports[`Storyshots Components/TextInput withIconsTextInput 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 ezPMxm"
  data-testid={null}
>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="TextInput__Group-shde0o-0 gRGOZf"
      placeholder="E.g. (03) 9451 1786"
      type="text"
    >
      <label
        className="TextInput__Label-shde0o-4 gJzsZZ"
        htmlFor="textInput9"
      >
        Phone number
      </label>
      <input
        className="TextInput__Input-shde0o-2 iitdbU"
        id="textInput9"
        label="Phone number"
        placeholder="E.g. (03) 9451 1786"
        type="text"
      />
      <div>
        <label
          className="TextInput__IconWrapper-shde0o-1 edUEWd"
          htmlFor="textInput9"
        >
          <span
            className="Icon__IconWrapper-xeqnbo-0 kIa-dkE"
            color="black"
            htmlFor="textInput9"
          >
            <svg
              className="svg-inline--fa fa-undefined"
            />
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="TextInput__Group-shde0o-0 gRGOZf"
      placeholder="E.g. (03) 9451 1786"
      type="text"
    >
      <input
        className="TextInput__Input-shde0o-2 ilDcqZ"
        id="textInput10"
        label="Phone number"
        placeholder="E.g. (03) 9451 1786"
        type="text"
      />
      <label
        className="TextInput__Label-shde0o-4 hhEVmY"
        htmlFor="textInput10"
      >
        Phone number
      </label>
      <div>
        <label
          className="TextInput__IconWrapper-shde0o-1 cFZdcO"
          htmlFor="textInput10"
        >
          <span
            className="Icon__IconWrapper-xeqnbo-0 kIa-dkE"
            color="black"
            htmlFor="textInput10"
          >
            <svg
              className="svg-inline--fa fa-undefined"
            />
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="TextInput__Group-shde0o-0 eQdUQs"
      placeholder="E.g. agile teams"
      type="text"
    >
      <label
        className="TextInput__Label-shde0o-4 gJzsZZ"
        htmlFor="textInput11"
      >
        What are you looking for?
      </label>
      <input
        className="TextInput__Input-shde0o-2 bjiVAr"
        id="textInput11"
        label="What are you looking for?"
        placeholder="E.g. agile teams"
        type="text"
      />
      <div>
        <label
          className="TextInput__IconWrapper-shde0o-1 jnpZQG"
          htmlFor="textInput11"
        >
          <span
            className="Icon__IconWrapper-xeqnbo-0 cOFzCH"
            color="#black"
            htmlFor="textInput11"
          >
            <svg
              className="svg-inline--fa fa-undefined"
            />
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="TextInput__Group-shde0o-0 eQdUQs"
      placeholder="E.g. agile teams"
      type="text"
    >
      <input
        className="TextInput__Input-shde0o-2 dLhsfK"
        id="textInput12"
        label="What are you looking for?"
        placeholder="E.g. agile teams"
        type="text"
      />
      <label
        className="TextInput__Label-shde0o-4 kVLpNw"
        htmlFor="textInput12"
      >
        What are you looking for?
      </label>
      <div>
        <label
          className="TextInput__IconWrapper-shde0o-1 hhiilF"
          htmlFor="textInput12"
        >
          <span
            className="Icon__IconWrapper-xeqnbo-0 cOFzCH"
            color="#black"
            htmlFor="textInput12"
          >
            <svg
              className="svg-inline--fa fa-undefined"
            />
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Units/TextInput Default 1`] = `
Array [
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="TextInput__Group-shde0o-0 gRGOZf"
      placeholder="E.g. John Smith"
      type="text"
    >
      <label
        className="TextInput__Label-shde0o-4 gJzsZZ"
        htmlFor="textInput1"
      >
        Full name
      </label>
      <input
        className="TextInput__Input-shde0o-2 gUCiTr"
        id="textInput1"
        label="Full name"
        placeholder="E.g. John Smith"
        type="text"
      />
    </div>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="TextInput__Group-shde0o-0 gRGOZf"
      placeholder="E.g. John Smith"
      type="text"
    >
      <label
        className="TextInput__Label-shde0o-4 ftnqwa"
        htmlFor="textInput2"
      >
        Full name
      </label>
      <input
        className="TextInput__Input-shde0o-2 jsIVpY"
        id="textInput2"
        label="Full name"
        placeholder="E.g. John Smith"
        type="text"
      />
    </div>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="TextInput__Group-shde0o-0 gRGOZf"
      placeholder="E.g. John Smith"
      type="text"
    >
      <label
        className="TextInput__Label-shde0o-4 dgeIiB"
        htmlFor="textInput3"
      >
        Full name
      </label>
      <input
        className="TextInput__Input-shde0o-2 koskDo"
        id="textInput3"
        label="Full name"
        placeholder="E.g. John Smith"
        type="text"
      />
    </div>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="TextInput__Group-shde0o-0 gRGOZf"
      placeholder="E.g. John Smith"
      type="text"
    >
      <label
        className="TextInput__Label-shde0o-4 khxHLp"
        htmlFor="textInput4"
      >
        Full name
      </label>
      <input
        className="TextInput__Input-shde0o-2 gUCiTr"
        id="textInput4"
        label="Full name"
        placeholder="E.g. John Smith"
        type="text"
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Units/TextInput Floating label 1`] = `
Array [
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="TextInput__Group-shde0o-0 gRGOZf"
      placeholder="E.g. John Smith"
      type="text"
    >
      <input
        className="TextInput__Input-shde0o-2 hOhAbG"
        id="textInput5"
        label="Full name"
        placeholder="E.g. John Smith"
        type="text"
      />
      <label
        className="TextInput__Label-shde0o-4 ZQbaL"
        htmlFor="textInput5"
      >
        Full name
      </label>
    </div>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="TextInput__Group-shde0o-0 gRGOZf"
      placeholder="E.g. John Smith"
      type="text"
    >
      <input
        className="TextInput__Input-shde0o-2 hUAA-Dg"
        id="textInput6"
        label="Full name"
        placeholder="E.g. John Smith"
        type="text"
      />
      <label
        className="TextInput__Label-shde0o-4 cohUvM"
        htmlFor="textInput6"
      >
        Full name
      </label>
    </div>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="TextInput__Group-shde0o-0 gRGOZf"
      placeholder="E.g. John Smith"
      type="text"
    >
      <input
        className="TextInput__Input-shde0o-2 hatoxP"
        id="textInput7"
        label="Full name"
        placeholder="E.g. John Smith"
        type="text"
      />
      <label
        className="TextInput__Label-shde0o-4 kYKNXg"
        htmlFor="textInput7"
      >
        Full name
      </label>
    </div>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="TextInput__Group-shde0o-0 gRGOZf"
      placeholder="E.g. John Smith"
      type="text"
    >
      <input
        className="TextInput__Input-shde0o-2 hOhAbG"
        id="textInput8"
        label="Full name"
        placeholder="E.g. John Smith"
        type="text"
      />
      <label
        className="TextInput__Label-shde0o-4 kYMwjf"
        htmlFor="textInput8"
      >
        Full name
      </label>
    </div>
  </div>,
]
`;

exports[`Storyshots Units/TextInput Number 1`] = `
<div
  className="TextInput__Group-shde0o-0 gRGOZf"
  value="345345.55"
>
  <label
    className="TextInput__Label-shde0o-4 gJzsZZ"
    htmlFor="numInput1"
  >
    Currency
  </label>
  <input
    className="TextInput__NumberInput-shde0o-3 bzFUJB"
    id="numInput1"
    inputMode="numeric"
    label="Currency"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseUp={[Function]}
    type="text"
    value="$345345.55"
  />
</div>
`;

exports[`Storyshots Units/TextInput With Icons 1`] = `
Array [
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="TextInput__Group-shde0o-0 gRGOZf"
      placeholder="E.g. (03) 9451 1786"
      type="text"
    >
      <label
        className="TextInput__Label-shde0o-4 gJzsZZ"
        htmlFor="textInput9"
      >
        Phone number
      </label>
      <input
        className="TextInput__Input-shde0o-2 iitdbU"
        id="textInput9"
        label="Phone number"
        placeholder="E.g. (03) 9451 1786"
        type="text"
      />
      <div>
        <label
          className="TextInput__IconWrapper-shde0o-1 edUEWd"
          htmlFor="textInput9"
        >
          <span
            className="Icon__IconWrapper-xeqnbo-0 kIa-dkE"
            color="black"
            htmlFor="textInput9"
          >
            <svg
              className="svg-inline--fa fa-undefined"
            />
          </span>
        </label>
      </div>
    </div>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="TextInput__Group-shde0o-0 gRGOZf"
      placeholder="E.g. (03) 9451 1786"
      type="text"
    >
      <input
        className="TextInput__Input-shde0o-2 ilDcqZ"
        id="textInput10"
        label="Phone number"
        placeholder="E.g. (03) 9451 1786"
        type="text"
      />
      <label
        className="TextInput__Label-shde0o-4 hhEVmY"
        htmlFor="textInput10"
      >
        Phone number
      </label>
      <div>
        <label
          className="TextInput__IconWrapper-shde0o-1 cFZdcO"
          htmlFor="textInput10"
        >
          <span
            className="Icon__IconWrapper-xeqnbo-0 kIa-dkE"
            color="black"
            htmlFor="textInput10"
          >
            <svg
              className="svg-inline--fa fa-undefined"
            />
          </span>
        </label>
      </div>
    </div>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="TextInput__Group-shde0o-0 eQdUQs"
      placeholder="E.g. agile teams"
      type="text"
    >
      <label
        className="TextInput__Label-shde0o-4 gJzsZZ"
        htmlFor="textInput11"
      >
        What are you looking for?
      </label>
      <input
        className="TextInput__Input-shde0o-2 bjiVAr"
        id="textInput11"
        label="What are you looking for?"
        placeholder="E.g. agile teams"
        type="text"
      />
      <div>
        <label
          className="TextInput__IconWrapper-shde0o-1 jnpZQG"
          htmlFor="textInput11"
        >
          <span
            className="Icon__IconWrapper-xeqnbo-0 cOFzCH"
            color="#black"
            htmlFor="textInput11"
          >
            <svg
              className="svg-inline--fa fa-undefined"
            />
          </span>
        </label>
      </div>
    </div>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="TextInput__Group-shde0o-0 eQdUQs"
      placeholder="E.g. agile teams"
      type="text"
    >
      <input
        className="TextInput__Input-shde0o-2 dLhsfK"
        id="textInput12"
        label="What are you looking for?"
        placeholder="E.g. agile teams"
        type="text"
      />
      <label
        className="TextInput__Label-shde0o-4 kVLpNw"
        htmlFor="textInput12"
      >
        What are you looking for?
      </label>
      <div>
        <label
          className="TextInput__IconWrapper-shde0o-1 hhiilF"
          htmlFor="textInput12"
        >
          <span
            className="Icon__IconWrapper-xeqnbo-0 cOFzCH"
            color="#black"
            htmlFor="textInput12"
          >
            <svg
              className="svg-inline--fa fa-undefined"
            />
          </span>
        </label>
      </div>
    </div>
  </div>,
]
`;
